jaeb-macros/tests/compile_fail/handler_retry_on_sync.rs
//! Retry on sync handler should fail.

use jaeb::{HandlerResult, handler};

#[derive(Clone)]
struct MyEvent;

#[handler(retries = 1)]
fn on_event(event: &MyEvent) -> HandlerResult {
    let _ = event;
    Ok(())
}

fn main() {}
